--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.0.21",
     "@clerk/nextjs": "^5.2.10",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
+    "client": "^0.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.417.0",
     "mongodb": "^6.8.0",
@@ -34,6 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
