--- a/package.json
+++ b/package.json
@@ -11,22 +11,33 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.0.21",
     "@clerk/nextjs": "^5.2.10",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@stripe/stripe-js": "^4.1.0",
     "class-variance-authority": "^0.7.0",
     "client": "^0.0.1",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.417.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "next-cloudinary": "^6.9.0",
     "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "stripe": "^16.6.0",
     "svix": "^1.27.0",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
